fix(travel): stabilize AI plan orchestration